--- a/vignettes/clr/biocad_storage/biocad_registryModel/vocabulary.html
+++ b/vignettes/clr/biocad_storage/biocad_registryModel/vocabulary.html
@@ -39,7 +39,7 @@
    PRIMARY KEY (`id`),
    UNIQUE KEY `id_UNIQUE` (`id`),
    KEY `search_term` (`category`,`term`)
- ) ENGINE=InnoDB AUTO<em>INCREMENT=292 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4</em>unicode_ci;
+ ) ENGINE=InnoDB AUTO<em>INCREMENT=1104 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4</em>general_ci;
  /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
  
  --
@@ -59,7 +59,7 @@
  /<em>!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION </em>/;
  /<em>!40111 SET SQL_NOTES=@OLD_SQL_NOTES </em>/;
  
- -- Dump completed on 2025-05-15 21:52:44
+ -- Dump completed on 2025-06-15 13:46:36
  ```</p>
 
         <h3>Declare</h3>        
