--- a/vignettes/biocad_registry/data_exports/export_metabolites.html
+++ b/vignettes/biocad_registry/data_exports/export_metabolites.html
@@ -27,7 +27,8 @@
         <h3>Usage</h3>
 
         <div style="width: 100%; padding-left: 3%; color: black;">
-            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>export_metabolites</strong>(<i>registry</i>);</code></pre>
+            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>export_metabolites</strong>(<i>registry</i>,
+    <i>page.size</i> = <span style='color: green;'>10000</span>);</code></pre>
         </div>
 
         <h3>Arguments</h3>
