--- a/vignettes/biocad_registry/data_exports/export_by_cids.html
+++ b/vignettes/biocad_registry/data_exports/export_by_cids.html
@@ -27,7 +27,8 @@
         <h3>Usage</h3>
 
         <div style="width: 100%; padding-left: 3%; color: black;">
-            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>export_by_cids</strong>(<i>registry</i>, <i>cid</i>);</code></pre>
+            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>export_by_cids</strong>(<i>registry</i>, <i>cid</i>,
+    <i>wrap.tqdm</i> = <span style='color: blue !important;'>TRUE</span>);</code></pre>
         </div>
 
         <h3>Arguments</h3>
