--- a/vignettes/biocad_registry/data_imports.html
+++ b/vignettes/biocad_registry/data_imports.html
@@ -100,6 +100,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="imports_lotus_np">
+    <a href="./data_imports/imports_lotus_np.html">imports_lotus_np</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_pubchem_repo">
     <a href="./data_imports/imports_pubchem_repo.html">imports_pubchem_repo</a>
   </td>
