--- a/vignettes/clr/biocad_storage/BioCadVocabulary.html
+++ b/vignettes/clr/biocad_storage/BioCadVocabulary.html
@@ -41,6 +41,7 @@ export class BioCadVocabulary {
    go_term: integer;
    hmdb_term: integer;
    kegg_term: integer;
+   lipidmaps: integer;
    metabolite_term: integer;
    molecule_entity: integer;
    protein_motif_term: integer;
