--- a/vignettes/biocad_registry/data_exports/export_metabolites.html
+++ b/vignettes/biocad_registry/data_exports/export_metabolites.html
@@ -28,6 +28,7 @@
 
         <div style="width: 100%; padding-left: 3%; color: black;">
             <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>export_metabolites</strong>(<i>registry</i>,
+    <i>file</i> = <span style='color: blue !important;'>NULL</span>,
     <i>page.size</i> = <span style='color: green;'>10000</span>);</code></pre>
         </div>
 
