--- a/vignettes/clr/biocad_storage/biocad_registryModel/vocabulary.html
+++ b/vignettes/clr/biocad_storage/biocad_registryModel/vocabulary.html
@@ -41,7 +41,7 @@
    KEY `search_term` (`category`,`term`),
    KEY `unique_result` (`term`,`color`),
    FULLTEXT KEY `search_text` (`note`)
- ) ENGINE=InnoDB AUTO<em>INCREMENT=1122 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4</em>general_ci;
+ ) ENGINE=InnoDB AUTO<em>INCREMENT=15033 DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4</em>general_ci COMMENT='vocabulary term of the entity in registry database';
  /<em>!40101 SET character_set_client = @saved_cs_client </em>/;
  
  --
@@ -61,7 +61,7 @@
  /<em>!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION </em>/;
  /<em>!40111 SET SQL_NOTES=@OLD_SQL_NOTES </em>/;
  
- -- Dump completed on 2025-07-26 21:15:39
+ -- Dump completed on 2025-11-07 21:28:19
  ```</p>
 
         <h3>Declare</h3>        
