run package msbuild

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -63,6 +63,7 @@ RoxygenNote: 7.1.1
 <li><a href="./R/docs/__push_compound_metadata.html">__push_compound_metadata</a></li>
 <li><a href="./R/docs/push_reaction.html">push_reaction</a></li>
 <li><a href="./R/docs/get_genbank.html">get_genbank</a></li>
+<li><a href="./R/docs/get_genbank_ftp.html">get_genbank_ftp</a></li>
 </ul>
 <h2>Library: biocad_registry.dll</h2>
 <ul>
